--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
   <body>
     <section class="container">
       <img src="./assets/images/PUNTA DEL GUAJE/Flor Icon.jpg" alt="Flora">
+      <p> Flora </p>
       <img src="./assets/images/PUNTA DEL GUAJE/Cuadro Icon.jpg" alt="Obras">
+      <a href="./obras.html"> Obras </a> 
       <img src="./assets/images/PUNTA DEL GUAJE/Plumas Icon.jpg" alt="Proceso">
+      <p> Proceso </p>
       <img src="./assets/images/PUNTA DEL GUAJE/favicon.png" alt="Punta del Guaje">
+      <p> Punta del Guaje </p>
     </section>
   </body>
   
